<resources>
    <string name="app_name">BeerApp</string>

    <string name="facebook_app_id" translatable="false">178002622819094</string>
    <string name="facebook_login_protocol_schema" translatable="false">fb178002622819094</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register_here">Register</string>
    <string name="register">Register</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="menu_map">Drink Map</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_profile">Your Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="nav_header_title">The Beer App</string>
    <string name="nav_header_app_info">The best app to find the newest drinks</string>
    <string name="title_activity_settings">Settings</string>
    <string name="dashboard_welcome">Welcome to the Beer App !</string>
    <string name="dash_welcome">Welcome to the Beer App !</string>
    <string name="menu_beers">Drinks</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="menu_newsfeed">Newsfeed</string>
    <string name="menu_locations">Locations</string>
    <string name="location_verify_address">Verify Address</string>
    <string name="location_name_label">Location Name</string>
    <string name="location_address_label">Location Address</string>
    <string name="beer_name_label">Beverage Name</string>
    <string name="beer_alcohol_level_label">Alcohol Level</string>
    <string name="newsfeed_top_rated_beers_label">Top rated drinks near you</string>
    <string name="newsfeed_top_rated_locations">Top rated locations near you</string>
    <string name="beverage_type_label">Beverage type</string>

    <string-array name="beverage_type_array">
        <item>Beer</item>
        <item>Wine</item>
        <item>Cocktail</item>
    </string-array>
    <string name="description_label">Description</string>
    <string name="title_activity_default_camera">DefaultCameraActivity</string>
    <string name="dashboard_friends_favorites">Friends favorites</string>
    <string name="menu_logout">Logout</string>
    <string name="scan_barcode_button">Scan Barcode</string>
    <string name="signup_welcome_label">Welcome to the Beer App !</string>
    <string name="forgot_password_label">Forgot Password</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="or">or</string>
    <string name="sign_up">Sign up</string>
    <string name="already_account">Already have an account ? Login</string>
    <string name="forgot_instruction">We just need your registered email to send your password reset instructions</string>
    <string name="reset_password">Reset password</string>
    <string name="back">Back</string>
    <string name="enter_name">Enter your name</string>
    <string name="confirm_selection">Confirm Selection</string>
    <string name="enter_location_name">Enter the name</string>
    <string name="enter_address">Enter the address</string>
    <string name="camera_capture">Capture</string>
    <string name="location_display_title">Title</string>
    <string name="location_display_alcohol">Alcohol Level</string>
    <string name="location_display">Rating</string>
    <string name="friend_profile_add_friend">Add as friend</string>
    <string name="friend_profile_name">Name</string>
    <string name="friend_profile_email">Email</string>
    <string name="friend_profile_phone">Phone</string>
    <string name="friend_profile_adress">Address</string>
    <string name="profile_">Save</string>
    <string name="profile_first_name">First Name</string>
    <string name="profile_last_name">Last Name</string>
    <string name="barcode">No Barcode</string>
    <string name="dialog_error">Error</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_fill_info">Fill all the required information.</string>
    <string name="dialog_already_exist">A drink with this name already exist !</string>
    <string name="drink_added">Drink(s) added successfully</string>
    <string name="tab_list_beer">Beers</string>
    <string name="tab_list_wine">Wines</string>
    <string name="tab_list_cocktail">Cocktails</string>
    <string name="dialog_missing_field">Missing Fields</string>
    <string name="verify_adress_not_found">Address not found ...</string>
    <string name="verify_adress_found">Address is correct !</string>
    <string name="tab_list_bar">Bars</string>
    <string name="forgot_password_send_email">We have sent the reset instruction to your email</string>
    <string name="forgot_password_fail_password">Failed to send password to your email</string>
    <string name="dialog_retreiving_message">Retrieving message</string>
    <string name="toast_login_successful">Login sucessful !</string>
    <string name="dialog_please_wait">Please wait ...</string>
    <string name="dialog_processing">Processing authentication ...</string>
    <string name="toast_email_not_found">Wrong email or password</string>
    <string name="toast_short_password">Password length must be over 6</string>
    <string name="dialog_data">Cracking a cold one ...</string>
    <string name="dialog_new_account">Processing registration ...</string>
    <string name="dialog_registration_succesful">Registration successful !</string>
    <string name="friend_profile_delete_friend">Delete friend</string>
    <string name="friend_profile_added">Added to your friends list !</string>
    <string name="friend_profile_removed">Removed from your friends list !</string>
    <string name="tab_list_friends">Friends</string>
    <string name="tab_list_not_friends">Other users</string>
    <string name="toast_saved">Saved !</string>
    <string name="title_activity_location_display">Location</string>
    <string name="title_activity_drink_display">Drink</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_beers">Drinks</string>
    <string name="title_activity_add_drink">Add new drink to location</string>
    <string name="title_activity_locations">Locations</string>
    <string name="title_activity_new_location">Add new location</string>
    <string name="title_activity_newsfeed">Newsfeed</string>
    <string name="title_activity_existing_drink">Select a drink to be added</string>
    <string name="title_activity_friend_profile">Friend profile</string>
    <string name="settings_save_button">Save Settings</string>
    <string name="barcode_scanned_success">Barcode successfully scanned !</string>
    <string name="settings_save">Settings saved !</string>
    <string name="dialog_permission">Permission</string>
    <string name="dialog_location">The application need your position to calculate the best locations and drinks around you !</string>
    <string name="settings_distance">Location discovery distance (km)</string>
    <string name="settings_friends">Number of friends\' favorite drinks to show</string>
    <string name="login_remember">Remember me !</string>
    <string name="versionName" translatable="false">v1.0.2</string>
    <string name="login_copyright" translatable="false">© Copyright 2018 - Maxime, Dimitra and Christophe</string>
    <string name="forgot_password_valid_email">Enter a valid email</string>

</resources>
