<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.beerapp.activities.location_drink.AddLocationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:context="view.beerapp.activities.location_drink.AddLocationActivity">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="view.beerapp.activities.location_drink.AddLocationActivity">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="140dp"
                android:layout_height="153dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_locations" />

            <EditText
                android:id="@+id/location_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/enter_location_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/location_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="27dp"
                android:ems="10"
                android:hint="@string/enter_address"
                android:inputType="textPostalAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/location_name" />

            <RatingBar
                android:id="@+id/location_rating"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/verify_address" />

            <EditText
                android:id="@+id/location_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/description_label"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_rating" />

            <Button
                android:id="@+id/create_location"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@android:color/holo_green_light"
                android:text="@string/create"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancel_location_creation"
                app:layout_constraintTop_toBottomOf="@+id/location_description" />

            <Button
                android:id="@+id/cancel_location_creation"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@+id/create_location"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_description" />

            <TextView
                android:id="@+id/location_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_name_label"
                app:layout_constraintBottom_toTopOf="@+id/location_name"
                app:layout_constraintStart_toStartOf="@+id/location_name" />

            <TextView
                android:id="@+id/location_address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_address_label"
                app:layout_constraintBottom_toTopOf="@+id/location_address"
                app:layout_constraintStart_toStartOf="@+id/location_address" />

            <Button
                android:id="@+id/verify_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickVerifyAddress"
                android:text="@string/location_verify_address"
                app:layout_constraintStart_toStartOf="@+id/location_address"
                app:layout_constraintTop_toBottomOf="@+id/location_address" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_label"
                app:layout_constraintBottom_toTopOf="@+id/location_description"
                app:layout_constraintStart_toStartOf="@+id/location_description" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>