<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.beerapp.activities.location_drink.AddDrinkActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="view.beerapp.activities.location_drink.AddDrinkActivity">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="140dp"
                android:layout_height="153dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/beer_placeholder" />

            <EditText
                android:id="@+id/beer_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/beer_alcool_level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="27dp"
                android:ems="10"
                android:hint="%"
                android:inputType="numberSigned|numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/beer_name" />

            <RatingBar
                android:id="@+id/location_rating"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/beverage_type_spinner" />

            <EditText
                android:id="@+id/beer_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/description_label"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_rating" />

            <Button
                android:id="@+id/create_beer"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@android:color/holo_green_light"
                android:text="@string/create"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancel_beer_creation"
                app:layout_constraintTop_toBottomOf="@+id/beer_description" />

            <Button
                android:id="@+id/cancel_beer_creation"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@+id/create_beer"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/beer_description" />

            <TextView
                android:id="@+id/beer_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beer_name_label"
                app:layout_constraintBottom_toTopOf="@+id/beer_name"
                app:layout_constraintStart_toStartOf="@+id/beer_name" />

            <TextView
                android:id="@+id/beer_level_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beer_alcohol_level_label"
                app:layout_constraintBottom_toTopOf="@+id/beer_alcool_level"
                app:layout_constraintStart_toStartOf="@+id/beer_alcool_level" />

            <Spinner
                android:id="@+id/beverage_type_spinner"
                android:layout_width="269dp"
                android:layout_height="38dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beverage_type_label"
                app:layout_constraintBottom_toTopOf="@+id/beverage_type_spinner"
                app:layout_constraintStart_toStartOf="@+id/beverage_type_spinner" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:text="@string/description_label"
                app:layout_constraintBottom_toTopOf="@+id/beer_description"
                app:layout_constraintStart_toStartOf="@+id/beer_description" />

            <Button
                android:id="@+id/scan_barcode"
                android:layout_width="293dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="96dp"
                android:onClick="scanBarcode"
                android:text="@string/scan_barcode_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/beer_description" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>